Fix notebook for prompted models

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -228,16 +228,20 @@
           "output_type": "stream",
           "text": [
             "Registering model with server\n",
+            "To view logs, run: 'uv run sky logs art5'\n",
+            "Registering model with server\n",
+            "To view logs, run: 'uv run sky logs art5'\n",
+            "Registering model with server\n",
             "To view logs, run: 'uv run sky logs art5'\n"
           ]
         }
       ],
       "source": [
         "class CustomConfig(BaseModel):\n",
-        "    litellm_model_name: str | None = None\n",
+        "    external_model_id: str | None = None\n",
         "\n",
         "model = art.TrainableModel(\n",
-        "    name=\"008\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
+        "    name=\"009\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
         ")\n",
         "await model.register(api)\n",
         "\n",
@@ -245,7 +249,7 @@
         "    name=\"gpt-4o-mini\",\n",
         "    project=\"tic-tac-toe\",\n",
         "    config=CustomConfig(\n",
-        "        litellm_model_name=\"openai/gpt-4o-mini\",\n",
+        "        external_model_id=\"gpt-4o-mini\",\n",
         "    ),\n",
         ")\n",
         "await gpt_4o_mini.register(api)\n",
@@ -254,7 +258,7 @@
         "    name=\"gpt-4o\",\n",
         "    project=\"tic-tac-toe\",\n",
         "    config=CustomConfig(\n",
-        "        litellm_model_name=\"openai/gpt-4o\",\n",
+        "        external_model_id=\"gpt-4o\",\n",
         "    ),\n",
         ")\n",
         "await gpt_4o.register(api)"
@@ -262,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -276,6 +280,7 @@
         "async def rollout(\n",
         "    model: art.Model, iteration: int, is_validation: bool\n",
         ") -> art.Trajectory:\n",
+        "    assert isinstance(model.config, CustomConfig)\n",
         "    game = generate_game()\n",
         "\n",
         "    trajectory = art.Trajectory(\n",
@@ -305,7 +310,7 @@
         "        messages = trajectory.messages()\n",
         "\n",
         "        try:\n",
-        "            model_id = model.config.litellm_model_name if isinstance(model.config, CustomConfig) else f\"hosted_vllm/{model.name}\"\n",
+        "            model_id = model.config.external_model_id if isinstance(model.config, CustomConfig) else model.name\n",
         "            client = model.openai_client()\n",
         "            chat_completion = await client.chat.completions.create(\n",
         "                model=model_id,\n",
@@ -392,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -412,9 +417,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "64a546d4d87c4223acd3c16fcd7c1bf3",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather gpt-4o-mini:   0%|          | 0/12 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c151b4a7830e46d3ab3d5bb1088cd479",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather gpt-4o:   0%|          | 0/12 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[None, None]"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import asyncio\n",
         "\n",
@@ -443,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
