--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -214,7 +214,7 @@
         "# get path to root of repo\n",
         "root_path = get_repo_root_path()\n",
         "\n",
-        "api = art.SkypilotAPI(cluster_name=\"art5\")\n",
+        "api = art.SkyPilotAPI(cluster_name=\"art5\")\n",
         "await api.initialize_cluster(art_version=root_path, env_path=f\"{root_path}/.env\")"
       ]
     },
