Change API initialization, imports

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -183,6 +183,7 @@
         "\n",
         "from openpipe.client import OpenPipe\n",
         "from art.utils.get_repo_root_path import get_repo_root_path\n",
+        "from art.skypilot import SkyPilotAPI\n",
         "\n",
         "load_dotenv()\n",
         "\n",
@@ -194,7 +195,7 @@
         "# get path to root of repo\n",
         "root_path = get_repo_root_path()\n",
         "\n",
-        "api = art.SkyPilotAPI(cluster_name=\"art5\")\n",
+        "api = SkyPilotAPI(cluster_name=\"art5\")\n",
         "await api.initialize_cluster(art_version=root_path, env_path=f\"{root_path}/.env\")"
       ]
     },
