--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -12,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -51,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -178,8 +187,6 @@
       "source": [
         "import art\n",
         "from dotenv import load_dotenv\n",
-        "import random\n",
-        "from pydantic import BaseModel\n",
         "\n",
         "from openpipe.client import OpenPipe\n",
         "from art.utils.get_repo_root_path import get_repo_root_path\n",
@@ -195,28 +202,18 @@
         "# get path to root of repo\n",
         "root_path = get_repo_root_path()\n",
         "\n",
-        "api = SkyPilotAPI(cluster_name=\"art5\")\n",
-        "await api.initialize_cluster(art_version=root_path, env_path=f\"{root_path}/.env\")"
+        "api = await SkyPilotAPI.initialize_cluster(\n",
+        "    cluster_name=\"art6\",\n",
+        "    art_version=root_path,\n",
+        "    env_path=f\"{root_path}/.env\"\n",
+        ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Registering model with server\n",
-            "To view logs, run: 'uv run sky logs art5'\n",
-            "Registering model with server\n",
-            "To view logs, run: 'uv run sky logs art5'\n",
-            "Registering model with server\n",
-            "To view logs, run: 'uv run sky logs art5'\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = art.TrainableModel(\n",
         "    name=\"009\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
@@ -325,7 +322,7 @@
         "\n",
         "        try:\n",
         "            apply_agent_move(game, content)\n",
-        "        except ValueError as e:\n",
+        "        except ValueError:\n",
         "            trajectory.reward = -1 + (math.log(move_number + 1) / math.log(100))\n",
         "            break\n",
         "\n",
