--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -2,18 +2,9 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -21,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -60,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -117,7 +108,7 @@
         "    try:\n",
         "        root = ET.fromstring(move)\n",
         "        square = root.text\n",
-        "    except Exception as e:\n",
+        "    except Exception:\n",
         "        raise ValueError(\"Invalid xml\")\n",
         "\n",
         "    try:\n",
@@ -203,7 +194,7 @@
         "root_path = get_repo_root_path()\n",
         "\n",
         "api = await SkyPilotAPI.initialize_cluster(\n",
-        "    cluster_name=\"art6\",\n",
+        "    cluster_name=\"art5\",\n",
         "    art_version=root_path,\n",
         "    env_path=f\"{root_path}/.env\"\n",
         ")"
@@ -215,6 +206,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import os\n",
+        "\n",
         "model = art.TrainableModel(\n",
         "    name=\"009\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
         ")\n",
@@ -223,6 +216,9 @@
         "gpt_4o_mini = art.Model(\n",
         "    name=\"gpt-4o-mini\",\n",
         "    project=\"tic-tac-toe\",\n",
+        "    inference_model_name=\"gpt-4o-mini\",\n",
+        "    inference_api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+        "    inference_base_url=\"https://api.openai.com/v1\",\n",
         ")\n",
         "await gpt_4o_mini.register(api)\n",
         "\n",
@@ -230,13 +226,15 @@
         "    name=\"gpt-4o\",\n",
         "    project=\"tic-tac-toe\",\n",
         "    inference_model_name=\"gpt-4o\",\n",
+        "    inference_api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
+        "    inference_base_url=\"https://api.openai.com/v1\",\n",
         ")\n",
         "await gpt_4o.register(api)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -365,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -385,48 +383,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "64a546d4d87c4223acd3c16fcd7c1bf3",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather gpt-4o-mini:   0%|          | 0/12 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c151b4a7830e46d3ab3d5bb1088cd479",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather gpt-4o:   0%|          | 0/12 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[None, None]"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import asyncio\n",
         "\n",
@@ -455,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
