Update notebook to use gpu

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -196,7 +196,8 @@
         "api = await SkyPilotAPI.initialize_cluster(\n",
         "    cluster_name=\"art5\",\n",
         "    art_version=root_path,\n",
-        "    env_path=f\"{root_path}/.env\"\n",
+        "    env_path=f\"{root_path}/.env\",\n",
+        "    gpu=\"H100\"\n",
         ")"
       ]
     },
