--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -4,13 +4,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To train this agent, click *Runtime* and press *Run all*. Make sure you've enabled a free Tesla T4 GPU!\n",
+        "To train this agent, click _Runtime_ and press _Run all_. Make sure you've enabled a free Tesla T4 GPU!\n",
+        "\n",
         "<div class=\"align-center\">\n",
         "<a href=\"https://github.com/openpipe/art\"><img src=\"https://github.com/openpipe/art/raw/main/assets/ART_pill.png\" height=\"50\"></a>\n",
-        "<a href=\"https://discord.com/invite/dnseNZuQ\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Discord_pill.png\" height=\"50\"></a>\n",
+        "<a href=\"https://discord.gg/zbBHRUpwf4\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Discord_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://openpipe.ai/blog/art-trainer-a-new-rl-trainer-for-agents\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
         "\n",
         "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
+        "\n",
         "</div>\n",
         "\n",
         "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a>\n",
@@ -19,8 +21,7 @@
         "\n",
         "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
         "\n",
-        " \n",
-        "You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop)."
+        "You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop).\n"
       ]
     },
     {
@@ -47,7 +48,8 @@
       "metadata": {},
       "source": [
         "### WARNING:\n",
-        "If you are running in Google Colab and installing numpy does not say \"Requirement already satisfied: numpy<2.0.0\" then click \"Runtime\" and \"Restart Session.\""
+        "\n",
+        "If you are running in Google Colab and installing numpy does not say \"Requirement already satisfied: numpy<2.0.0\" then click \"Runtime\" and \"Restart Session.\"\n"
       ]
     },
     {
@@ -81,7 +83,7 @@
         "\n",
         "Later on in the notebook, we'll be creating a model that can automatically logs metrics to Weights & Biases. In order to do so, you'll need to provide your Weights & Biases API key as an environment variable.\n",
         "\n",
-        "You can also optionally initiate an OpenPipe client to report completions to a [dashboard](https://app.openpipe.ai) to get a feel for what the completions your model is generating look like, and how they change over time. Logging to OpenPipe is free, but is not required for training!"
+        "You can also optionally initiate an OpenPipe client to report completions to a [dashboard](https://app.openpipe.ai) to get a feel for what the completions your model is generating look like, and how they change over time. Logging to OpenPipe is free, but is not required for training!\n"
       ]
     },
     {
@@ -108,7 +110,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Installation"
+        "### Installation\n"
       ]
     },
     {
@@ -130,13 +132,14 @@
       },
       "source": [
         "### Agentic Environment\n",
+        "\n",
         "<a name=\"Environment\"></a>\n",
         "\n",
         "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment in which the agent can play 2048.\n",
         "\n",
         "Feel free to read as much or as little of this section's code as you'd like. The important thing to understand is that we're defining the rules of this agent's environment. In many cases, this will already be defined by the task you're trying to solve, but if you need to define a custom environment, this is how you do it.\n",
         "\n",
-        "NOTE: To avoid OOM errors on a T4, we're reducing the winning value from 2048 to 128, which in turn reduces the minimum number of moves to win from 939 to 58."
+        "NOTE: To avoid OOM errors on a T4, we're reducing the winning value from 2048 to 128, which in turn reduces the minimum number of moves to win from 939 to 58.\n"
       ]
     },
     {
@@ -156,10 +159,12 @@
         "\n",
         "WINNING_VALUE = 128\n",
         "\n",
+        "\n",
         "# Class that keeps track of state for a single game of 2048\n",
         "class TwentyFortyEightGame(TypedDict):\n",
         "    id: str\n",
         "    board: list[list[int | None]]\n",
+        "\n",
         "\n",
         "# Randomly populates a cell on the board with a 2 or 4\n",
         "def populate_random_cell(game: TwentyFortyEightGame) -> None:\n",
@@ -175,6 +180,7 @@
         "        2 if random.random() < 0.9 else 4\n",
         "    )\n",
         "\n",
+        "\n",
         "# Generates a new game of 2048\n",
         "def generate_game(board_length: int = 4) -> TwentyFortyEightGame:\n",
         "    # random 6 character string\n",
@@ -189,6 +195,7 @@
         "    populate_random_cell(game)\n",
         "\n",
         "    return game\n",
+        "\n",
         "\n",
         "# Renders the board in a human-readable format\n",
         "def render_board(game: TwentyFortyEightGame) -> str:\n",
@@ -240,6 +247,7 @@
         "\n",
         "    # pad the sequence with None at the end\n",
         "    return condensed_sequence + [None] * (4 - len(condensed_sequence))\n",
+        "\n",
         "\n",
         "# Condenses the board in a given direction\n",
         "def condense_board(\n",
@@ -293,9 +301,11 @@
         "\n",
         "    populate_random_cell(game)\n",
         "\n",
+        "\n",
         "# Returns the maximum cell value on the board\n",
         "def max_cell_value(game: TwentyFortyEightGame) -> int:\n",
         "    return max([cell for row in game[\"board\"] for cell in row if cell is not None])\n",
+        "\n",
         "\n",
         "# Returns True if the game is finished\n",
         "def check_game_finished(game: TwentyFortyEightGame) -> bool:\n",
@@ -308,6 +318,7 @@
         "\n",
         "    return True\n",
         "\n",
+        "\n",
         "# Returns the sum of all the cell values on the board\n",
         "def total_board_value(game: TwentyFortyEightGame) -> int:\n",
         "    return sum([cell for row in game[\"board\"] for cell in row if cell is not None])\n"
@@ -319,7 +330,7 @@
       "source": [
         "### Creating a Model\n",
         "\n",
-        "Now that we've defined the rules of our environment, we can create a model that will learn to play 2048. We'll use a Qwen 2.5 3B model for this example. The `name` parameter will be associated with a wandb run, and the `base_model` parameter is the model that we'll be training a LoRA on top of."
+        "Now that we've defined the rules of our environment, we can create a model that will learn to play 2048. We'll use a Qwen 2.5 3B model for this example. The `name` parameter will be associated with a wandb run, and the `base_model` parameter is the model that we'll be training a LoRA on top of.\n"
       ]
     },
     {
@@ -379,6 +390,7 @@
       },
       "source": [
         "### Defining a Rollout\n",
+        "\n",
         "<a name=\"Rollout\"></a>\n",
         "\n",
         "A rollout is a single episode of an agent performing its task. It generates one or more trajectories, which are lists of messages and choices.\n",
@@ -387,7 +399,7 @@
         "\n",
         "When the game is finished the `reward` for the agent's performance is calculated based on the highest cell value on the board, which is then assigned to the trajectory.\n",
         "\n",
-        "This rollout function will be called many times in parallel during each step of the training loop."
+        "This rollout function will be called many times in parallel during each step of the training loop.\n"
       ]
     },
     {
@@ -408,7 +420,6 @@
         "async def rollout(\n",
         "    client: openai.AsyncOpenAI, step: int, is_validation: bool\n",
         ") -> art.Trajectory:\n",
-        "\n",
         "    game = generate_game()\n",
         "\n",
         "    move_number = 0\n",
@@ -424,7 +435,6 @@
         "    )\n",
         "\n",
         "    while True:\n",
-        "\n",
         "        trajectory.messages_and_choices.append(\n",
         "            {\"role\": \"user\", \"content\": render_board(game)}\n",
         "        )\n",
@@ -533,14 +543,14 @@
       },
       "source": [
         "<a name=\"Loop\"></a>\n",
+        "\n",
         "### Training Loop\n",
         "\n",
         "The training loop is where the magic happens. For each of the 50 steps defined below, the rollout function will be called 18 times in parallel. This means that 18 games will be played at once. Each game will produce a trajectory, which will be used to update the model.\n",
         "\n",
         "The `gather` step will wait for all of the trajectories to be generated, then it will delete all but the most recent checkpoint and train the model on the new trajectories.\n",
         "\n",
-        "Inference will be blocked until the training is complete.\n",
-        "\n"
+        "Inference will be blocked until the training is complete.\n"
       ]
     },
     {
@@ -579,7 +589,7 @@
         "\n",
         "Just like that, you've trained an agent to play 2048! Now it's time to use your model outside of ART, in the wild! The easiest way to do that is to load it from disk, where it was saved after each training step, and either run inference on it locally or upload it to a central hub like HuggingFace.\n",
         "\n",
-        "Check out the code below for small demo of the model you just trained playing 2048!"
+        "Check out the code below for small demo of the model you just trained playing 2048!\n"
       ]
     },
     {
@@ -739,15 +749,17 @@
         "\n",
         "\n",
         "# example: .art/2048-multi-turn/models/001/0003\n",
-        "lora_model_path = f\".art/{model.project}/models/{model.name}/{await model.get_step():04d}\"\n",
+        "lora_model_path = (\n",
+        "    f\".art/{model.project}/models/{model.name}/{await model.get_step():04d}\"\n",
+        ")\n",
         "\n",
         "print(f\"loading model from {lora_model_path}\\n\")\n",
         "\n",
         "peft_model, tokenizer = FastLanguageModel.from_pretrained(\n",
-        "    model_name = lora_model_path,\n",
-        "    max_seq_length = 16384,\n",
-        "    dtype = torch.bfloat16,\n",
-        "    load_in_4bit = True,\n",
+        "    model_name=lora_model_path,\n",
+        "    max_seq_length=16384,\n",
+        "    dtype=torch.bfloat16,\n",
+        "    load_in_4bit=True,\n",
         ")\n",
         "FastLanguageModel.for_inference(peft_model)\n",
         "\n",
@@ -755,15 +767,19 @@
         "move_number = 0\n",
         "\n",
         "messages = [\n",
-        "    {\"role\": \"system\", \"content\": \"You are an excellent 2048 player. Always choose the move most likely to lead to combine cells to eventually reach the number 2048. Optional moves are 'left', 'right', 'up', 'down'. Return your move as an XML object with a single property 'move', like so: <move>left</move>\"},\n",
+        "    {\n",
+        "        \"role\": \"system\",\n",
+        "        \"content\": \"You are an excellent 2048 player. Always choose the move most likely to lead to combine cells to eventually reach the number 2048. Optional moves are 'left', 'right', 'up', 'down'. Return your move as an XML object with a single property 'move', like so: <move>left</move>\",\n",
+        "    },\n",
         "]\n",
         "\n",
         "while not check_game_finished(game):\n",
         "    rendered_board = render_board(game)\n",
         "    messages.append({\"role\": \"user\", \"content\": rendered_board})\n",
         "\n",
-        "\n",
-        "    inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\", add_generation_prompt=True).to(\"cuda\")\n",
+        "    inputs = tokenizer.apply_chat_template(\n",
+        "        messages, return_tensors=\"pt\", add_generation_prompt=True\n",
+        "    ).to(\"cuda\")\n",
         "\n",
         "    content = \"\"\n",
         "\n",
@@ -774,9 +790,11 @@
         "                max_new_tokens=100,\n",
         "                do_sample=True,\n",
         "                temperature=0.7,\n",
-        "                top_p=0.9\n",
+        "                top_p=0.9,\n",
         "            )\n",
-        "            return tokenizer.decode(outputs[0][inputs.shape[1]:], skip_special_tokens=True)\n",
+        "            return tokenizer.decode(\n",
+        "                outputs[0][inputs.shape[1] :], skip_special_tokens=True\n",
+        "            )\n",
         "\n",
         "    try:\n",
         "        content = get_completion()\n",
@@ -785,7 +803,6 @@
         "        raise e\n",
         "\n",
         "    messages.append({\"role\": \"assistant\", \"content\": content})\n",
-        "    \n",
         "\n",
         "    try:\n",
         "        apply_agent_move(game, content)\n",
@@ -794,13 +811,12 @@
         "        raise ValueError(f\"Invalid move on move {move_number}: {content}\")\n",
         "\n",
         "    # print the board every 10 moves\n",
-        "    if (move_number % 10 == 0):\n",
+        "    if move_number % 10 == 0:\n",
         "        print(f\"\\nmove {move_number}\")\n",
         "        print(f\"board:\\n{rendered_board}\")\n",
         "        print(f\"agent move: {content}\")\n",
         "        print(f\"updated board:\\n{render_board(game)}\")\n",
         "\n",
-        "        \n",
         "\n",
         "print(f\"game finished in {move_number} moves\")\n",
         "\n",
@@ -824,11 +840,11 @@
       "source": [
         "<div class=\"align-center\">\n",
         "<a href=\"https://github.com/openpipe/art\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
-        "<a href=\"https://discord.com/invite/dnseNZuQ\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
+        "<a href=\"https://discord.gg/zbBHRUpwf4\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://openpipe.ai/blog/art-trainer-a-new-rl-trainer-for-agents\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
         "\n",
-        "\n",
         "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
+        "\n",
         "</div>\n"
       ]
     }
