Update yes-no-maybe example

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -12,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -56,19 +65,20 @@
       "outputs": [],
       "source": [
         "import art\n",
-        "import httpx\n",
+        "from art.skypilot import SkyPilotAPI\n",
         "from dotenv import load_dotenv\n",
         "import openai\n",
         "\n",
         "load_dotenv()\n",
         "\n",
+        "api = await SkyPilotAPI.initialize_cluster(cluster_name=\"art5\", gpu=\"H100\")\n",
         "\n",
         "model = art.TrainableModel(\n",
         "    name=\"001\",\n",
         "    project=\"yes-no-maybe\",\n",
         "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
         ")\n",
-        "await model.register(art.API())\n",
+        "await model.register(api)\n",
         "\n",
         "\n",
         "async def rollout(client: openai.AsyncOpenAI, prompt: str) -> art.Trajectory:\n",
@@ -79,7 +89,7 @@
         "        }\n",
         "    ]\n",
         "    chat_completion = await client.chat.completions.create(\n",
-        "        messages=messages, model=model.name, max_tokens=100\n",
+        "        messages=messages, model=model.name, max_tokens=100, timeout=100\n",
         "    )\n",
         "    choice = chat_completion.choices[0]\n",
         "    content = choice.message.content\n",
@@ -118,7 +128,7 @@
         "for _ in range(await model.get_step(), 1_000):\n",
         "    train_groups = await art.gather_trajectory_groups(\n",
         "        (\n",
-        "            art.TrajectoryGroup(rollout(openai_client, prompt) for _ in range(64))\n",
+        "            art.TrajectoryGroup(rollout(openai_client, prompt) for _ in range(32))\n",
         "            for prompt in prompts\n",
         "        ),\n",
         "        pbar_desc=\"gather\",\n",
