Change yes-no-maybe back to LocalAPI

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -2,18 +2,9 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -21,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -65,13 +56,13 @@
       "outputs": [],
       "source": [
         "import art\n",
-        "from art.skypilot import SkyPilotAPI\n",
+        "from art.local import LocalAPI\n",
         "from dotenv import load_dotenv\n",
         "import openai\n",
         "\n",
         "load_dotenv()\n",
         "\n",
-        "api = await SkyPilotAPI.initialize_cluster(cluster_name=\"art5\", gpu=\"H100\")\n",
+        "api = LocalAPI()\n",
         "\n",
         "model = art.TrainableModel(\n",
         "    name=\"001\",\n",
