Move some LocalTrainer s3 utils to separate file
Default to BACKUP_BUCKET name

Move things around

Accept empty prefix

Default to BACKUP_BUCKET name

Accept empty prefix

Default to BACKUP_BUCKET name

Accept empty prefix

Remove annoying outputs

--- a/examples/2048/benchmark_2048.ipynb
+++ b/examples/2048/benchmark_2048.ipynb
@@ -8,17 +8,38 @@
    "source": [
     "import importlib\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "from art.utils.benchmarking.load_trajectories import load_trajectories\n",
     "from art.utils.benchmarking.charts import percentage_comparison_bar_chart, training_progress_chart\n",
     "import art.utils.benchmarking.charts\n",
     "from art.utils.benchmarking.types import BenchmarkModelKey\n",
-    "from art.utils.output_dirs import get_benchmarks_dir\n",
     "from art.utils.get_repo_root_path import get_repo_root_path\n",
+    "from art.utils.s3 import pull_model_from_s3\n",
+    "\n",
     "\n",
     "importlib.reload(art.utils.benchmarking.charts)\n",
     "\n",
+    "load_dotenv()\n",
+    "\n",
     "project_name = \"2048\"\n",
+    "\n",
+    "await pull_model_from_s3(\n",
+    "    model_name=\"003\",\n",
+    "    project=project_name,\n",
+    ")\n",
+    "await pull_model_from_s3(\n",
+    "    model_name=\"gpt-4o\",\n",
+    "    project=project_name,\n",
+    ")\n",
+    "await pull_model_from_s3(\n",
+    "    model_name=\"gpt-4.1\",\n",
+    "    project=project_name,\n",
+    ")\n",
+    "await pull_model_from_s3(\n",
+    "    model_name=\"gpt-4o-mini\",\n",
+    "    project=project_name,\n",
+    ")\n",
     "\n",
     "await load_trajectories.bust_cache()\n",
     "df = await load_trajectories(\n",
@@ -27,9 +48,7 @@
     "    models=[\"003\", \"gpt-4o\", \"gpt-4.1\", \"gpt-4o-mini\"],\n",
     ")\n",
     "\n",
-    "benchmarks_root_dir = f\"{get_repo_root_path()}/assets/benchmarks\"\n",
-    "\n",
-    "benchmarks_dir = get_benchmarks_dir(project=project_name, path=benchmarks_root_dir)\n",
+    "benchmarks_dir = f\"{get_repo_root_path()}/assets/benchmarks/{project_name}\"\n",
     "\n",
     "os.makedirs(benchmarks_dir, exist_ok=True)"
    ]
