Default to BACKUP_BUCKET name

--- a/examples/2048/benchmark_2048.ipynb
+++ b/examples/2048/benchmark_2048.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import importlib\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "from art.utils.benchmarking.load_trajectories import load_trajectories\n",
     "from art.utils.benchmarking.charts import percentage_comparison_bar_chart, training_progress_chart\n",
@@ -15,8 +16,11 @@
     "from art.utils.benchmarking.types import BenchmarkModelKey\n",
     "from art.utils.output_dirs import get_benchmarks_dir\n",
     "from art.utils.get_repo_root_path import get_repo_root_path\n",
+    "from art.utils.s3 import build_s3_path, s3_sync\n",
     "\n",
     "importlib.reload(art.utils.benchmarking.charts)\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "project_name = \"2048\"\n",
     "\n",
