--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -328,11 +328,14 @@
         "import openai\n",
         "import time\n",
         "import math\n",
+        "from pydantic import BaseModel\n",
         "\n",
+        "class TicTacToeScenario(BaseModel):\n",
+        "    step: int\n",
         "\n",
         "@art.retry(exceptions=(openai.LengthFinishReasonError,))\n",
         "async def rollout(\n",
-        "    model: art.Model, iteration: int, is_validation: bool\n",
+        "    model: art.Model, scenario: TicTacToeScenario\n",
         ") -> art.Trajectory:\n",
         "    game = generate_game()\n",
         "\n",
@@ -388,8 +391,7 @@
         "                    \"messages\": messages,\n",
         "                    \"metadata\": {\n",
         "                        \"notebook-id\": \"tic-tac-toe\",\n",
-        "                        \"iteration\": str(iteration),\n",
-        "                        \"validation\": str(is_validation),\n",
+        "                        \"step\": str(scenario.step),\n",
         "                        \"move_number\": str(move_number),\n",
         "                    },\n",
         "                },\n",
@@ -477,7 +479,7 @@
         "    train_groups = await art.gather_trajectory_groups(\n",
         "        (\n",
         "            art.TrajectoryGroup(\n",
-        "                rollout(model, i, is_validation=False) for _ in range(200)\n",
+        "                rollout(model, TicTacToeScenario(step=i)) for _ in range(200)\n",
         "            )\n",
         "            for _ in range(1)\n",
         "        ),\n",
