--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -398,11 +398,17 @@
     "import time\n",
     "import math\n",
     "import requests\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "class Scenario2048(BaseModel):\n",
+    "    step: int\n",
+    "\n",
     "\n",
     "\n",
     "@art.retry(exceptions=(openai.LengthFinishReasonError, requests.ReadTimeout))\n",
     "async def rollout(\n",
-    "    model: art.Model, step: int, is_validation: bool\n",
+    "    model: art.Model, scenario: Scenario2048\n",
     ") -> art.Trajectory:\n",
     "    game = generate_game()\n",
     "\n",
@@ -454,8 +460,7 @@
     "                        \"metadata\": {\n",
     "                            \"game_id\": game[\"id\"],\n",
     "                            \"notebook-id\": \"2048\",\n",
-    "                            \"step\": str(step),\n",
-    "                            \"validation\": str(is_validation),\n",
+    "                            \"step\": str(scenario.step),\n",
     "                            \"move_number\": str(move_number),\n",
     "                        },\n",
     "                    },\n",
@@ -548,7 +553,7 @@
     "    train_groups = await art.gather_trajectory_groups(\n",
     "        (\n",
     "            art.TrajectoryGroup(\n",
-    "                rollout(model, i, is_validation=False) for _ in range(18)\n",
+    "                rollout(model, Scenario2048(step=i)) for _ in range(18)\n",
     "            )\n",
     "            for _ in range(1)\n",
     "        ),\n",
