Avoid reporting completions without op key

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -381,23 +381,24 @@
         "            global failing_trajectory\n",
         "            failing_trajectory = trajectory\n",
         "            raise e\n",
-        "\n",
+        "        \n",
         "        try:\n",
-        "            op_client.report(\n",
-        "                requested_at=requested_at,\n",
-        "                received_at=int(time.time() * 1000),\n",
-        "                req_payload={\n",
-        "                    \"model\": model.name,\n",
-        "                    \"messages\": messages,\n",
-        "                    \"metadata\": {\n",
-        "                        \"notebook-id\": \"tic-tac-toe\",\n",
-        "                        \"step\": str(scenario.step),\n",
-        "                        \"move_number\": str(move_number),\n",
+        "            if op_client.api_key:\n",
+        "                op_client.report(\n",
+        "                    requested_at=requested_at,\n",
+        "                    received_at=int(time.time() * 1000),\n",
+        "                    req_payload={\n",
+        "                        \"model\": model.name,\n",
+        "                        \"messages\": messages,\n",
+        "                        \"metadata\": {\n",
+        "                            \"notebook-id\": \"tic-tac-toe\",\n",
+        "                            \"step\": str(scenario.step),\n",
+        "                            \"move_number\": str(move_number),\n",
+        "                        },\n",
         "                    },\n",
-        "                },\n",
-        "                resp_payload=chat_completion,\n",
-        "                status_code=200,\n",
-        "            )\n",
+        "                    resp_payload=chat_completion,\n",
+        "                    status_code=200,\n",
+        "                )\n",
         "        except Exception as e:\n",
         "            print(f\"Error reporting to OpenPipe: {e}\")\n",
         "\n",
