Some for updating metadata

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -435,18 +435,19 @@
         "    trajectory.metrics[\"num_moves\"] = move_number\n",
         "\n",
         "    try:\n",
-        "        op_client.update_log_metadata(\n",
-        "            filters=[\n",
-        "                {\n",
-        "                    \"field\": \"completionId\",\n",
-        "                    \"equals\": last_completion.id,\n",
-        "                }\n",
-        "            ],\n",
-        "            metadata={\n",
-        "                \"reward\": str(trajectory.reward),\n",
-        "                \"reward_assigned\": \"true\",\n",
-        "            },\n",
-        "        )\n",
+        "        if op_client.api_key:\n",
+        "            op_client.update_log_metadata(\n",
+        "                filters=[\n",
+        "                    {\n",
+        "                        \"field\": \"completionId\",\n",
+        "                        \"equals\": last_completion.id,\n",
+        "                    }\n",
+        "                ],\n",
+        "                metadata={\n",
+        "                    \"reward\": str(trajectory.reward),\n",
+        "                    \"reward_assigned\": \"true\",\n",
+        "                },\n",
+        "            )\n",
         "    except Exception as e:\n",
         "        print(f\"Error updating log metadata: {e}\")\n",
         "\n",
