--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -434,24 +434,30 @@
         "\n",
         "    trajectory.metrics[\"num_moves\"] = move_number\n",
         "\n",
-        "    try:\n",
-        "        if op_client.api_key:\n",
-        "            op_client.update_log_metadata(\n",
-        "                filters=[\n",
-        "                    {\n",
-        "                        \"field\": \"completionId\",\n",
-        "                        \"equals\": last_completion.id,\n",
-        "                    }\n",
-        "                ],\n",
-        "                metadata={\n",
-        "                    \"reward\": str(trajectory.reward),\n",
-        "                    \"reward_assigned\": \"true\",\n",
-        "                },\n",
+        "    if op_client.api_key:\n",
+        "        try:\n",
+        "            reported_win = (\n",
+        "                trajectory.metrics[\"win\"] if \"win\" in trajectory.metrics else -1\n",
         "            )\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error updating log metadata: {e}\")\n",
-        "\n",
-        "        print(trajectory.reward)\n",
+        "            op_client.report(\n",
+        "                requested_at=requested_at,\n",
+        "                received_at=int(time.time() * 1000),\n",
+        "                req_payload={\n",
+        "                    \"model\": model.name,\n",
+        "                    \"messages\": messages,\n",
+        "                    \"metadata\": {\n",
+        "                        \"notebook-id\": \"tic-tac-toe\",\n",
+        "                        \"step\": str(scenario.step),\n",
+        "                        \"num_moves\": str(move_number),\n",
+        "                        \"win\": str(reported_win),\n",
+        "                        \"reward\": str(trajectory.reward),\n",
+        "                    },\n",
+        "                },\n",
+        "                resp_payload=chat_completion,\n",
+        "                status_code=200,\n",
+        "            )\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error reporting to OpenPipe: {e}\")\n",
         "\n",
         "    return trajectory\n"
       ]
