--- a/dev/swebench/inference.ipynb
+++ b/dev/swebench/inference.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,38 +51,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import nest_asyncio\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"SWE_AGENT_CONFIG_DIR\"] = \".\"\n",
+    "os.environ[\"SWE_AGENT_TOOLS_DIR\"] = \"tools\"\n",
+    "os.environ[\"SWE_AGENT_TRAJECTORY_DIR\"] = \"trajectories\"\n",
+    "\n",
+    "os.makedirs(\"replays\", exist_ok=True)\n",
+    "os.makedirs(\"trajectories\", exist_ok=True)\n",
+    "\n",
+    "load_dotenv()\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:torchao.kernel.intmm:Warning: Detected no triton, on systems without Triton certain kernels will not work\n"
+      "INFO 05-29 00:20:15 [importing.py:53] Triton module has been replaced with a placeholder.\n",
+      "INFO 05-29 00:20:15 [__init__.py:239] Automatically detected platform cuda.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'init_args': {'enable_prefix_caching': True}}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import art\n",
+    "from art.multidevice import MultiDeviceBackend\n",
     "\n",
-    "art.TrainableModel(\n",
-    "    name=\"blue-fly\",\n",
-    "    project=\"my-project\",\n",
+    "from instances import as_instances_iter, get_filtered_swe_smith_instances_df\n",
+    "from rollout import ModelConfig, rollout\n",
+    "\n",
+    "instances = (get_filtered_swe_smith_instances_df().sample(fraction=1.0, shuffle=True, seed=42).head(1).pipe(as_instances_iter))\n",
+    "\n",
+    "backend = MultiDeviceBackend()\n",
+    "model = art.TrainableModel(\n",
+    "    name=\"001\",\n",
+    "    project=\"swebench\",\n",
     "    base_model=\"Qwen/Qwen2.5-14B-Instruct\",\n",
-    "    _internal_config=art.dev.InternalModelConfig(\n",
-    "        init_args={\"enable_prefix_caching\": True}\n",
-    "    )\n",
-    ")._internal_config"
+    "    config=ModelConfig()\n",
+    ")\n",
+    "await model.register(backend)\n",
+    "\n",
+    "trajectory_groups = await art.gather_trajectory_groups(\n",
+    "    (\n",
+    "        art.TrajectoryGroup(rollout(model, instance) for _ in range(1)) for instance in instances\n",
+    "    ),\n",
+    "    pbar_total_completion_tokens=False\n",
+    ")"
    ]
   }
  ],
@@ -102,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
